--- a/take-a-quiz.html
+++ b/take-a-quiz.html
@@ -4,8 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="general.css">
+  <link rel="stylesheet" href="cards.css">
 </head>
 <body>
-  
+  <ul class="topnav">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="add-question.html">Add questions</a></li>
+    <li><a href="make-a-quiz.html">Create a quiz</a></li>
+    <li><a class="active" href="take-a-quiz.html">Take a quiz</a></li>
+    <li class="right"><a href="#about">About</a></li>
+  </ul>
+
+  <h2>Here is the list of available quizzes. Click on a quiz to start taking the quiz.</h2>
+
+  <div id="list" class="cards"></div>
+
+  <script>
+    let host = "http://localhost:8080";
+    let quizzes = [];
+    displayTheQuizzes();
+
+    async function getAll() {
+        let response = await fetch(host + "/quizzes");
+        let result = await response.json();
+        return result;
+      }
+
+      async function displayTheQuizzes(){
+
+        if (quizzes.length == 0){
+          quizzes = await getAll();
+          console.log(quizzes);
+        }
+
+        let list = document.getElementById("list");
+        list.innerHTML = "";
+
+        for (let quiz of quizzes) {
+          let div = document.createElement("div");
+          div.className = "card";
+          div.onclick = function() {
+            takeTest(quiz.id)
+          };
+          let innerHtml = `
+          <div class="container">
+            <h4><b>${quiz.id}</b></h4> 
+            <p>${quiz.title}<p>
+            <p>(${quiz.questionIds.length} Questions)<p>
+          </div>
+          `;
+          div.innerHTML = innerHtml;
+          list.appendChild(div);
+        }
+      }
+
+      async function takeTest(id){
+        let url = 'quiz.html?id=' + id;
+        window.location.href = url;
+      }
+  </script>
 </body>
 </html>
