--- a/add-question.html
+++ b/add-question.html
@@ -59,7 +59,7 @@
     <div id="list" class="cards"></div>
 
     <script>
-      let host = https://midterm-latest.onrender.com;
+      let host = "https://midterm-latest.onrender.com";
       let questions = [];
       displayTheQuestions();
 
