--- a/make-a-quiz.html
+++ b/make-a-quiz.html
@@ -42,7 +42,7 @@
   </div>
 
   <script>
-    let host = https://midterm-latest.onrender.com;
+    let host = "https://midterm-latest.onrender.com";
     let saveId = 0;
     let questions = [];
     let selectedQuestions = [];
