--- a/make-a-quiz.html
+++ b/make-a-quiz.html
@@ -72,7 +72,7 @@
 
       let innerHtml = `
    
-    <img src="http://localhost:8080/questions/${question.id}/image" alt="question" style="width:100%">
+    <img src="https://midterm-latest.onrender.com/questions/${question.id}/image" alt="question" style="width:100%">
     <div class="container">
       <h4><b>${question.id}</b></h4> 
       <p>${question.description}</p>
@@ -111,7 +111,7 @@ async function displayTheSelectedQuestions() {
 
       let innerHtml = `
    
-    <img src="http://localhost:8080/questions/${question.id}/image" alt="question" style="width:100%">
+    <img src="https://midterm-latest.onrender.com/questions/${question.id}/image" alt="question" style="width:100%">
     <div class="container">
       <h4><b>${question.id}</b></h4> 
       <p>${question.description}</p>
