--- a/quiz.html
+++ b/quiz.html
@@ -40,7 +40,7 @@
           div.className = "card";
           let innerHtml = `
          
-        <img src="http://localhost:8080/questions/${questions[currentQuestion].id}/image" alt="question" style="width:100%">
+        <img src="https://midterm-latest.onrender.com/questions/${questions[currentQuestion].id}/image" alt="question" style="width:100%">
         <div class="container">
           <h4><b>${questions[currentQuestion].id}</b></h4> 
           <p>${questions[currentQuestion].description}</p>
